--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -9,7 +9,10 @@ jobs:
   archive:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v2
+      with:
+        ref: master
+        fetch-depth: 1
     - uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
