--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -29,10 +29,11 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         TFNSW_API_KEY: ${{ secrets.TFNSW_API_KEY }}
-    - run: |
+    - name: Push to data branch
+      run: |
           cd data
           git config user.name jxeeno
           git config user.email ken+github@anytrip.com.au
-          git add .
-          git commit -m "auto(): update feeds"
-          git push
+          git add . || exit 0
+          git commit -m "auto(): update feeds" || exit 0
+          git push || exit 0
